added script for handelbars template. removed javascripts/templates and require_tree ./templates from application.js. video_games.js: removed old HTML building code for video_games table. added code to apply handlebar template to video_game table.

--- a/app/views/video_games/index.html.erb
+++ b/app/views/video_games/index.html.erb
@@ -4,3 +4,12 @@
   <tbody id="vg_tbody">
   </tbody>
 </table>
+
+<script id="video_game_template" type="text/x-handlebars-template">
+  <tr id="vg_{{id}}_tr">
+    <td>
+      <a href="/video_games/{{id}}">{{title}}</a>
+    </td>
+    <td id="vg_{{id}}_button_td"></td>
+  </tr>
+</script>
