--- a/app/views/video_games/index.html.erb
+++ b/app/views/video_games/index.html.erb
@@ -13,3 +13,11 @@
     <td id="vg_{{id}}_button_td"></td>
   </tr>
 </script>
+
+<script id="add_to_collection_template" type="text/x-handlebars-template">
+  <form class="add_vg" id="add_vg_{{vgId}}" action="/user_video_games" accept-charset="UTF-8" method="post">
+    <input type="hidden" name="videoGameId" id="video_game_id_{{vgId}}" value="${json[videoGame]['id']}">
+    <input type="submit" value="Add to Collection"></input>
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  </form>
+</script>
