tag/_form.html.erb: added id to submit button. removed auto disable for Create Tag button, to allow multiple new tag adding. added JS to remove text from create new tag textbox after form submission.  added JS to prevent enw <tr> from adding if form with no data was submitted.

--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for tag do |f| %>
     <tr>
-      <td><%= f.text_field :name %></td>
-      <td><%= f.submit %></td>
+      <td><%= f.text_field :name, id: "tag_text_box" %></td>
+      <td><%= f.submit "Create Tag", id: "submit_tag", data: { disable_with: false } %></td>
     </tr>
 <% end %>
