tags/index.html.erb: added handlebars template for newly added tag. tags.js: added code to insert data into handlebars template on new tag form submission.

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -13,3 +13,18 @@
     <% end %>
   </tbody>
 </table>
+
+<script id="new_tag_template" type="text/x-handlebars-template">
+  <tr>
+    <td>
+      <a href="/tags/{{tagId}}">{{tagName}}</a>
+    </td>
+    <td>
+      <form class="delete_tag" id="delete_tag_{{tagId}}" action="/tags/{{tagId}}" accept-charset="UTF-8" method="post">
+        <input name="_method" type="hidden" value="delete" />
+        <input type="submit" value="Delete"></input>
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+      </form>
+    </td>
+  </tr>
+</script>
