tags.js: removed old code that was commented out. added deleteTag(). added js code to dynamically delete tag

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -15,13 +15,14 @@
 </table>
 
 <script id="new_tag_template" type="text/x-handlebars-template">
-  <tr>
+  <tr id ="tr_{{tagId}}">
     <td>
       <a href="/tags/{{tagId}}">{{tagName}}</a>
     </td>
     <td>
-      <form class="delete_tag" id="delete_tag_{{tagId}}" action="/tags/{{tagId}}" accept-charset="UTF-8" method="post">
+      <form class="delete_tag" class="delete_tag" id="delete_tag_{{tagId}}" action="/tags/{{tagId}}" accept-charset="UTF-8" method="post">
         <input name="_method" type="hidden" value="delete" />
+        <input type="hidden" name="tag_id" id="tag_id_{{tagId}}" value="{{tagId}}">
         <input type="submit" value="Delete"></input>
         <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
       </form>
