video_games.js: added event listener for Sort hyperlink.  added callback function to sort video games by title alphabetically. video_games/index.html.erb: added hyperlink for Sort in HTML.

--- a/app/views/video_games/index.html.erb
+++ b/app/views/video_games/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Video Games</h1>
   <p><%= link_to "Add New Video Game", new_video_game_path %></p>
+  <p><a href="#" id="vg-sort-link">Sort</a></p>
 <table class="table">
   <tbody id="vg_tbody">
   </tbody>
